--- a/packages/react-scripts-unicode/package.json
+++ b/packages/react-scripts-unicode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "@unicodeveloper/react-scripts",
   "version": "0.6.1",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
