--- a/packages/react-scripts-unicode/package.json
+++ b/packages/react-scripts-unicode/package.json
@@ -20,7 +20,7 @@
     "utils"
   ],
   "bin": {
-    "unicodeveloper-react-scripts": "./bin/react-scripts.js"
+    "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
     "autoprefixer": "6.4.1",
